--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@source inline('{dark:,}{bg,text}-{slate,gray,zinc,neutral,stone,red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{50,{100..900..100},950}');
 
 @custom-variant dark (&:is(.dark *));
+
+/* Colors */
+@source inline('{bg,text}-{red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{500}');
+
+/* Grids */
+@source inline('{col-span-{3,4,6,8,9}}')
 
 @theme inline {
   --color-accent-foreground: var(--accent-foreground);
