--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 @source inline('{bg,text}-{red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{500}');
 
 /* Grids */
-@source inline('{col-span-{3,4,6,8,9}}')
+@source inline('{col-span-{3,4,6,8,9}}');
 
 @theme inline {
   --color-accent-foreground: var(--accent-foreground);
