--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -358,4 +358,13 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:active,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:hover {
+    -webkit-text-fill-color: var(--foreground) !important;
+    background-color: transparent !important;
+    transition: background-color 5000s ease-in-out 0s;
+  }
 }
