--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -370,7 +370,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-sm text-foreground;
   }
 
   input:-webkit-autofill,
