--- a/resources/css/utilities.css
+++ b/resources/css/utilities.css
@@ -26,7 +26,7 @@
       transparent,
       transparent,
       var(--primary),
-      var(--secondary),
+      var(--border),
       transparent,
       transparent
     );
