Clean up service providers

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,7 @@
 @import "./utilities.css";
 
 @source inline('{col-span-{3,4,6,8,9}}');
+@source inline('{flex-{col,row}-reverse}');
 
 @layer base {
   * {
