--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,6 @@
 @import "./theme.css";
 @import "./colors.css";
+@import "./font.css";
 @import "./utilities.css";
 
 @source inline('{col-span-{3,4,6,8,9}}');
